rust/crates/rax/src/text/rules/snapshots/rax__text__rules__until_n_in_char_set__tests__ascii_keep_right.snap
---
source: crates/rax/src/text/rules/until_n_in_char_set.rs
expression: result
---
Ok(
    (
        "a1b",
        "2c3",
    ),
)
