rust/crates/rax/src/text/rules/snapshots/rax__text__rules__until_n_in_char_set__tests__ascii_not_enough_matches.snap
---
source: crates/rax/src/text/rules/until_n_in_char_set.rs
expression: result
---
Err(
    RuleError {
        reason: "fewer than N matches found",
    },
)
