rust/crates/rax/src/text/rules/snapshots/rax__text__rules__until_n_in_char_set__tests__utf8_unicode_keep_left.snap
---
source: crates/rax/src/text/rules/until_n_in_char_set.rs
expression: result
---
Ok(
    (
        "你好",
        "世界",
    ),
)
