rust/crates/rax/src/text/rules/snapshots/rax__text__rules__until_n_in_char_set__tests__zero_n.snap
---
source: crates/rax/src/text/rules/until_n_in_char_set.rs
expression: result
---
Ok(
    (
        "",
        "a1b2c3",
    ),
)
